--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -14,6 +14,10 @@ libquery = "^0.1.1"
 scikit-learn = "^1.3.2"
 
 
+[tool.poetry.group.dev.dependencies]
+requests = "^2.32.3"
+tqdm = "^4.67.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
