--- a/server/pyproject.toml
+++ b/server/pyproject.toml
@@ -8,13 +8,13 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.10,<4.0"
 dependencies = [
-    "flask (>=3.1.0,<4.0.0)",
-    "flask-cors (>=5.0.1,<6.0.0)",
-    "numpy (>=2.2.3,<3.0.0)",
     "libquery (>=0.1.1,<0.2.0)",
-    "scikit-learn (>=1.6.1,<2.0.0)",
-    "requests (>=2.32.3,<3.0.0)",
-    "tqdm (>=4.67.1,<5.0.0)"
+    "tqdm (>=4.67.1,<5.0.0)",
+    "scikit-learn (>=1.7.1,<2.0.0)",
+    "numpy (==1.26.4)",
+    "fastapi[standard] (>=0.116.1,<0.117.0)",
+    "pydantic (>=2.11.7,<3.0.0)",
+    "requests (>=2.32.4,<3.0.0)"
 ]
 
 
@@ -24,4 +24,5 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.group.dev.dependencies]
 black = "^25.1.0"
+flake8 = "^7.3.0"
 
