--- a/client-label/package.json
+++ b/client-label/package.json
@@ -19,14 +19,14 @@
     "fuse.js": "^7.1.0",
     "iso-639-3": "^3.0.1",
     "lodash": "^4.17.21",
-    "nprogress": "^0.2.0",
     "pinia": "^3.0.3",
     "pinia-plugin-persistedstate": "^4.5.0",
     "seedrandom": "^3.0.5",
     "uuid": "^11.1.0",
     "v-object-inspector": "^0.1.3",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "with-progress-bar": "^0.1.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^5.2.1",
@@ -36,7 +36,6 @@
     "@types/file-saver": "^2.0.7",
     "@types/lodash": "^4.17.20",
     "@types/node": "^24.2.1",
-    "@types/nprogress": "^0.2.3",
     "@types/seedrandom": "^3.0.8",
     "@types/uuid": "^10.0.0",
     "@unocss/eslint-config": "^66.4.2",
